Added omnibox functionality
 - Added ability to open sessions with the omnibox.
 - Added omnibox help to the options page.
 - Reorganized background.js.
 - Removed ability to save sessions with a zero character name, because besides the UI issues it causes, it could have other unknown side effects.

--- a/options.html
+++ b/options.html
@@ -46,6 +46,9 @@
 				<li>Click "Remove" to remove the session. You will be asked to confirm the removal.</li>
 			</ul>
 			
+			<h2>Omnibox</h2>
+			<p>Sessions can be opened by typing "session" in the omnibox and pressing the tab or space key, then entering the session name and pressing enter. Session Manager may suggest some sessions based on the text entered.</p>
+			
 			<h2>Incognito</h2>
 			<p>"Allow in incognito" must be checked under Session Manager in chrome://extensions for the incognito features to work. Sessions can be saved and opened normally in existing incognito windows, and can be opened in new incognito windows with the combo in the "Opening sessions" options.</p>
 			
