--- a/popup.html
+++ b/popup.html
@@ -41,8 +41,8 @@
 		
 		<fieldset id="rename"><legend id="rename-legend"></legend>
 			<div class="box">
-				<input type="text" id="rename-text" class="flex" data-view="main" data-action="" data-actionindex="1">
-				<button data-view="main" data-action="" data-actionindex="1">Rename</button>
+				<input type="text" id="rename-text" class="flex" data-action="" data-actionindex="1">
+				<button data-action="" data-actionindex="1">Rename</button>
 				<button data-view="main">Cancel</button>
 			</div>
 		</fieldset>
