Updated jQuery, version, and changelog
Updated jQuery to version 1.5.1, upped the Session Manager version to 3.1.0, and updated the changelog.

--- a/options.html
+++ b/options.html
@@ -59,6 +59,14 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.1.0 (2011-02-24)</h2>
+			<ul>
+				<li>Added omnibox functionality.</li>
+				<li>Minor design improvements, including custom scrollbars on the session list that fit the look of Session Manager better.</li>
+				<li>Minor internal improvements.</li>
+				<li>Fixed severe but obscure bug.</li>
+			</ul>
+			
 			<h2>3.0.0 (2011-01-18)</h2>
 			<ul>
 				<li>Switched from modal dialogs to built in non blocking dialogs. Improves design and fixes Session Manager on Mac OS X and Linux (there is a Chrome bug that freezes extensions when they use modal dialogs) and import and export bugs.</li>
