Fixed severe bug
Fixed a severe bug introduced in 81b475e3fbef78ec804df1d750046091699cbc62.

--- a/options.html
+++ b/options.html
@@ -59,6 +59,11 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.1.1 (2011-02-28)</h2>
+			<ul>
+				<li>Fixed a severe bug where changing the "add to current window" combo to something other than "click" broke opening sessions.</li>
+			</ul>
+			
 			<h2>3.1.0 (2011-02-24)</h2>
 			<ul>
 				<li>Added omnibox functionality.</li>
