--- a/options.html
+++ b/options.html
@@ -59,6 +59,11 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.1.2 (2011-03-12)</h2>
+			<ul>
+				<li>Added a check that prevents failure if there is no omnibox API available. Some users were experiencing this even when running Chrome 9+.</li>
+			</ul>
+			
 			<h2>3.1.1 (2011-02-28)</h2>
 			<ul>
 				<li>Fixed a severe bug where changing the "add to current window" combo to something other than "click" broke opening sessions.</li>
