--- a/options.html
+++ b/options.html
@@ -11,7 +11,7 @@
 			<h1>Options</h1>
 			
 			<h2>Opening sessions</h2>
-			<div>
+			<div id="open">
 				<label for="open-add">Add to current window</label><select id="open-add"></select>
 				<label for="open-replace">Replace current window</label><select id="open-replace"></select>
 				<label for="open-new">Open in new normal window</label><select id="open-new"></select>
@@ -20,7 +20,13 @@
 			
 			<h2>Pinned tabs</h2>
 			<div>
-				<label><input type="checkbox" id="pinned-ignore"> Ignore pinned tabs when saving sessions</label>
+				<div>
+					<label><input type="radio" name="pinned-save" value="skip"> Don't save pinned tabs</label>
+					<label><input type="radio" name="pinned-save" value="strip"> Save pinned tabs as normal tabs</label>
+					<!--<label><input type="radio" name="pinned-save" value="save"> Save pinned tabs and their pinned state</label>-->
+				</div>
+				
+				<label><input type="checkbox" id="pinned-noreplace"> Leave pinned tabs alone when replacing windows</label>
 			</div>
 		</section>
 		
