--- a/background.html
+++ b/background.html
@@ -1,2 +1,17 @@
 <!DOCTYPE html>
 <script src="js/background.js"></script>
+<script>
+var _gaq = _gaq || [];
+_gaq.push(
+	["_setAccount", "##GA##"],
+	['_setCustomVar', 1, 'Version', localStorage.version, 2],
+	['_setSessionCookieTimeout', 0],
+	["_trackPageview", "/"]
+);
+
+(function(){
+	var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true;
+	ga.src = "https://ssl.google-analytics.com/ga.js";
+	var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
