New version plus build script!

--- a/options.html
+++ b/options.html
@@ -70,6 +70,13 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.3.0 (2011-11-17)</h2>
+			<ul>
+				<li>Added to and improved pinned tabs options.</li>
+				<li>Always close the popup when opening sessions (workaround for a Chrome bug).</li>
+				<li>Internal changes.</li>
+			</ul>
+			
 			<h2>3.2.0 (2011-06-06)</h2>
 			<ul>
 				<li>Added option to ignore pinned tabs when saving sessions.</li>
