Much better update notification that also automatically hides after the first time it's shown
also some silly tweaks as usual...

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,10 @@
 					<button data-action="save">Save</button>
 				</div>
 			</fieldset>
+			
+			<fieldset id="main-update">
+				<p>Session Manager has been updated! <a href="options.html#changelog" target="_blank">View the changelog...</a></p>
+			</fieldset>
 		</div>
 		
 		<fieldset id="import"><legend>Import</legend>
