Added a "who?" section to the options page and updated the changelog and extension version

--- a/options.html
+++ b/options.html
@@ -63,14 +63,23 @@
 			<h2>Incognito</h2>
 			<p>"Allow in incognito" must be checked under Session Manager in chrome://extensions for the incognito features to work. Sessions can be saved and opened normally in existing incognito windows, and can be opened in new incognito windows with the combo in the "Opening sessions" options.</p>
 			
-			<h2>Comments/questions/bugs/suggestions?</h2>
+			<h2>Comments/questions/bugs/suggestions</h2>
 			<p>If you have a problem and need a reply, feel free to send me an <a href="mailto:me@tkaz.ec">email</a>. Otherwise, leave a comment on Session Manager's <a href="https://chrome.google.com/webstore/detail/mghenlmbmjcpehccoangkdpagbcbkdpc">web store page</a>.</p>
 			
-			<!-- <h2>Who?</h2> -->
+			<h2>Who?</h2>
+			<p>I'm a 15 year old web &amp; game developer who loves making beautiful, useful, and fun things. Like this extension? Check out my <a href="http://tkaz.ec">other stuff</a>!</p>
 		</section>
 		
 		<section id="changelog">
 			<h1>Changelog</h1>
+			
+			<h2>3.3.1 (2011-12-09)</h2>
+			<ul>
+				<li>Vastly improved the update notification UI.</li>
+				<li>Added a workaround for a critical failure caused by a bug in very old versions of Chrome.</li>
+				<li>Added a little more detail to this page.</li>
+				<li>Internal improvements.</li>
+			</ul>
 			
 			<h2>3.3.0 (2011-11-17)</h2>
 			<ul>
