added a little to the build script and help

--- a/options.html
+++ b/options.html
@@ -64,7 +64,7 @@
 			<p>"Allow in incognito" must be checked under Session Manager in chrome://extensions for the incognito features to work. Sessions can be saved and opened normally in existing incognito windows, and can be opened in new incognito windows with the combo in the "Opening sessions" options.</p>
 			
 			<h2>Comments/questions/bugs/suggestions</h2>
-			<p>If you have a problem and need a reply, feel free to send me an <a href="mailto:me@tkaz.ec">email</a>. Otherwise, leave a comment on Session Manager's <a href="https://chrome.google.com/webstore/detail/mghenlmbmjcpehccoangkdpagbcbkdpc">web store page</a>.</p>
+			<p>If you have a problem and need a reply, feel free to send me an <a href="mailto:me@tkaz.ec">email</a>. Otherwise, leave a comment on Session Manager's <a href="https://chrome.google.com/webstore/detail/mghenlmbmjcpehccoangkdpagbcbkdpc">web store page</a>. If you're a developer and would like to contribute, awesome! Session Manager is open source, and can be found <a href="https://github.com/tkazec/session-manager">on GitHub</a>.</p>
 			
 			<h2>Who?</h2>
 			<p>I'm a 15 year old web &amp; game developer who loves making beautiful, useful, and fun things. Like this extension? Check out my <a href="http://tkaz.ec">other stuff</a>!</p>
