hmm. new version and some tweaks. yay!

--- a/options.html
+++ b/options.html
@@ -36,9 +36,9 @@
 			<p>Session Manager is a simple extension that makes it easy to save, update, restore, and remove sets of tabs.</p>
 			
 			<ul>
-				<li>Create sessions for daily routines: Pages you open in the morning, noon and evening.</li>
-				<li>Group pages of common interest such as News, Financial and Social Networks.</li>
-				<li>Save the pages found during a research session that you'd like to revisit later.</li>
+				<li>Create sessions for daily routines: Pages you open in the morning, noon and evening.
+				<li>Group pages of common interest such as News, Financial and Social Networks.
+				<li>Save the pages found during a research session that you'd like to revisit later.
 			</ul>
 			
 			<h2>Saving sessions</h2>
@@ -49,12 +49,12 @@
 			
 			<h2>Session list</h2>
 			<ul>
-				<li>Hover over the tab count to view the url list.</li>
-				<li>Click "Open" while optionally holding modifier keys to open the session. Key+click combo configuration is in the "Opening sessions" options.</li>
-				<li>Click "Rename" and enter the new name to rename the session. If the new name is already in use by a session, you will be asked to confirm replacing it.</li>
-				<li>Click "Add" to add the current window's tabs to the session. You will be asked to confirm adding them.</li>
-				<li>Click "Replace" to replace the session with the current window's tabs. You will be asked to confirm the replacement.</li>
-				<li>Click "Remove" to remove the session. You will be asked to confirm the removal.</li>
+				<li>Hover over the tab count to view the url list.
+				<li>Click "Open" while optionally holding modifier keys to open the session. Key+click combo configuration is in the "Opening sessions" options.
+				<li>Click "Rename" and enter the new name to rename the session. If the new name is already in use by a session, you will be asked to confirm replacing it.
+				<li>Click "Add" to add the current window's tabs to the session. You will be asked to confirm adding them.
+				<li>Click "Replace" to replace the session with the current window's tabs. You will be asked to confirm the replacement.
+				<li>Click "Remove" to remove the session. You will be asked to confirm the removal.
 			</ul>
 			
 			<h2>Omnibox</h2>
@@ -73,56 +73,64 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.3.2 (2012-01-02)</h2>
+			<ul>
+				<li>Added a list of major changes to the update notification.
+				<li>Added a warning for users running old versions of Chrome.
+				<li>Fixed a bug that reset the setting for saving pinned tabs every time Chrome was launched.
+				<li>Other tiny, mostly internal improvements.
+			</ul>
+			
 			<h2>3.3.1 (2011-12-09)</h2>
 			<ul>
-				<li>Vastly improved the update notification UI.</li>
-				<li>Added a workaround for a critical failure caused by a bug in very old versions of Chrome.</li>
-				<li>Added a little more detail to this page.</li>
-				<li>Internal improvements.</li>
+				<li>Vastly improved the update notification UI.
+				<li>Added a workaround for a critical failure caused by a bug in very old versions of Chrome.
+				<li>Added a little more detail to this page.
+				<li>Internal improvements.
 			</ul>
 			
 			<h2>3.3.0 (2011-11-17)</h2>
 			<ul>
-				<li>Added to and improved pinned tabs options.</li>
-				<li>Always close the popup when opening sessions (workaround for a Chrome bug).</li>
-				<li>Internal changes.</li>
+				<li>Added to and improved pinned tabs options.
+				<li>Always close the popup when opening sessions (workaround for a Chrome bug).
+				<li>Internal changes.
 			</ul>
 			
 			<h2>3.2.0 (2011-06-06)</h2>
 			<ul>
-				<li>Added option to ignore pinned tabs when saving sessions.</li>
-				<li>Minor internal changes.</li>
+				<li>Added option to ignore pinned tabs when saving sessions.
+				<li>Minor internal changes.
 			</ul>
 			
 			<h2>3.1.2 (2011-03-12)</h2>
 			<ul>
-				<li>Added a check that prevents failure if there is no omnibox API available. Some users were experiencing this even when running Chrome 9+.</li>
+				<li>Added a check that prevents failure if there is no omnibox API available. Some users were experiencing this even when running Chrome 9+.
 			</ul>
 			
 			<h2>3.1.1 (2011-02-28)</h2>
 			<ul>
-				<li>Fixed a severe bug where changing the "add to current window" combo to something other than "click" broke opening sessions.</li>
+				<li>Fixed a severe bug where changing the "add to current window" combo to something other than "click" broke opening sessions.
 			</ul>
 			
 			<h2>3.1.0 (2011-02-24)</h2>
 			<ul>
-				<li>Added omnibox functionality.</li>
-				<li>Minor design improvements, including custom scrollbars on the session list that fit the look of Session Manager better.</li>
-				<li>Minor internal improvements.</li>
-				<li>Fixed severe but obscure bug.</li>
+				<li>Added omnibox functionality.
+				<li>Minor design improvements, including custom scrollbars on the session list that fit the look of Session Manager better.
+				<li>Minor internal improvements.
+				<li>Fixed severe but obscure bug.
 			</ul>
 			
 			<h2>3.0.0 (2011-01-18)</h2>
 			<ul>
-				<li>Switched from modal dialogs to built in non blocking dialogs. Improves design and fixes Session Manager on Mac OS X and Linux (there is a Chrome bug that freezes extensions when they use modal dialogs) and import and export bugs.</li>
-				<li>Improved layout and design.</li>
-				<li>Added incognito support.</li>
-				<li>Added the "Replace" session action.</li>
-				<li>Added "Add" action to the temp session, and gave it a tab count and list.</li>
-				<li>Rewrote the code for the ~5th and ~6th time, it's finally perfect!</li>
-				<li>Added help and changelog to the options page.</li>
-				<li>Added update notification.</li>
-				<li>Probably a few more minor changes I forgot about.</li>
+				<li>Switched from modal dialogs to built in non blocking dialogs. Improves design and fixes Session Manager on Mac OS X and Linux (there is a Chrome bug that freezes extensions when they use modal dialogs) and import and export bugs.
+				<li>Improved layout and design.
+				<li>Added incognito support.
+				<li>Added the "Replace" session action.
+				<li>Added "Add" action to the temp session, and gave it a tab count and list.
+				<li>Rewrote the code for the ~5th and ~6th time, it's finally perfect!
+				<li>Added help and changelog to the options page.
+				<li>Added update notification.
+				<li>Probably a few more minor changes I forgot about.
 			</ul>
 		</section>
 		
