--- a/popup.html
+++ b/popup.html
@@ -27,9 +27,9 @@
 				<p>Session Manager has been updated! Changes include:</p>
 				
 				<ul>
-					<li>Vastly improved the update notification UI.</li>
-					<li>Added a workaround for a critical failure caused by a bug in very old versions of Chrome.</li>
-					<li>Added a little more detail to the options/help page.</li>
+					<li>Added a list of major changes to the update notification.
+					<li>Added a warning for users running old versions of Chrome.
+					<li>Fixed a bug that reset the setting for saving pinned tabs every time Chrome was launched.
 				</ul>
 				
 				<p><a href="options.html#changelog" target="_blank">View the full list...</a></p>
