The usual healthy dose of tweaks

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf8">
-		<link rel="stylesheet" href="css/html5-reset.css">
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/popup.css">
 	</head>
 	<body>
