--- a/background.html
+++ b/background.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
+<meta charset="utf8">
 <script src="https://ssl.google-analytics.com/ga.js" async></script>
 <script src="js/background.js"></script>
