help updates for the changed functionality

--- a/options.html
+++ b/options.html
@@ -45,16 +45,17 @@
 			<p>To save a session, enter the name in the textbox in the "Save this window's tabs" area and press enter. A session with that name containing the current window's tabs will be created. If a session with that name already exists, you will be asked to confirm replacing it.</p>
 			
 			<h2>Temp session</h2>
-			<p>The temporary session is a special session that, when the browser is opened, will automatically open and delete itself. Click "as temp session" next to "Save this window's tabs" to save or replace it. Except for renaming and replacing, the temp session can be opened and modified like a normal session as described below.</p>
+			<p>The temporary session is a special session that, when the browser is opened, will automatically open and delete itself. Click "as temp session" next to "Save this window's tabs" to save or replace it. Except for renaming, the temp session can be opened and modified like a normal session as described below.</p>
 			
 			<h2>Session list</h2>
 			<ul>
 				<li>Hover over the tab count to view the url list.
+				<li>Click the name of the session and enter the new name to rename it. If the new name is already in use by a session, you will be asked to confirm replacing it.
+				<li>Click the little "&times;" to remove the session. You will be asked to confirm the removal.
 				<li>Click "Open" while optionally holding modifier keys to open the session. Key+click combo configuration is in the "Opening sessions" options.
-				<li>Click "Rename" and enter the new name to rename the session. If the new name is already in use by a session, you will be asked to confirm replacing it.
 				<li>Click "Add" to add the current window's tabs to the session. You will be asked to confirm adding them.
+				<li>Click "tab" next to "Add" to add the current tab to the session. You will be asked to confirm adding it.
 				<li>Click "Replace" to replace the session with the current window's tabs. You will be asked to confirm the replacement.
-				<li>Click "Remove" to remove the session. You will be asked to confirm the removal.
 			</ul>
 			
 			<h2>Omnibox</h2>
