NEW VERSION WOOOO

--- a/options.html
+++ b/options.html
@@ -74,6 +74,15 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.3.3 (2012-01-09)</h2>
+			<ul>
+				<li>Changed the rename action to be triggered by clicking on a session's name.
+				<li>Changed the remove action to be triggered by clicking on the little "&times;".
+				<li>Added a "tab" action (next to "Add"), which adds the current tab to a session.
+				<li>The usual healthy dose of internal tweaks...
+				<li>Thanks to Ken McGlothlen for suggesting the "add tab" action and helping me figure out the design changes!
+			</ul>
+			
 			<h2>3.3.2 (2012-01-02)</h2>
 			<ul>
 				<li>Added a list of major changes to the update notification.
