--- a/popup.html
+++ b/popup.html
@@ -27,9 +27,10 @@
 				<p>Session Manager has been updated! Changes include:</p>
 				
 				<ul>
-					<li>Added a list of major changes to the update notification.
-					<li>Added a warning for users running old versions of Chrome.
-					<li>Fixed a bug that reset the setting for saving pinned tabs every time Chrome was launched.
+					<li>Changed the rename action to be triggered by clicking on a session's name.
+					<li>Changed the remove action to be triggered by clicking on the little "&times;".
+					<li>Added a "tab" action (next to "Add"), which adds the current tab to a session. As a reminder, "Add" adds the current window's tabs to a session.
+					<li>Thanks to Ken McGlothlen for suggesting the "add tab" action and helping me figure out the design changes!
 				</ul>
 				
 				<p><a href="options.html#changelog" target="_blank">View the full list...</a></p>
