--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf8">
+		<meta charset="utf-8">
 		<title>Session Manager</title>
 		<link rel="stylesheet" href="css/html5-reset.css">
 		<link rel="stylesheet" href="css/options.css">
