why'd I miss this before? :/

--- a/popup.html
+++ b/popup.html
@@ -66,7 +66,7 @@
 		
 		<fieldset id="confirm"><legend>Confirm</legend>
 			<p id="confirm-text"></p>
-			<button data-view="main">No</button><button data-view="main" data-action="">Yes</button>
+			<span><button data-view="main" data-action="">Yes</button> <button data-view="main">No</button></span>
 		</fieldset>
 		
 		<script src="js/jquery.js"></script>
