Tweak some stuff and re-add export analytics

--- a/popup.html
+++ b/popup.html
@@ -49,9 +49,9 @@
 		
 		<fieldset id="export"><legend>Export</legend>
 			<p>To begin, simply click the link to save your sessions to a file. Then, transfer that file to another computer via your favorite service (e.g. email, dropbox, pastebin). Once it's there, just follow the import instructions.</p><br>
-			<p>NOTE: Chrome may not show that the file has been saved. Check your downloads folder for it.</p>
+			<p>NOTE: Chrome may not show that the file has been saved. Check your downloads folder for it. <span id="export-check">&#x2713;</span></p>
 			<span>
-				<a id="export-link" download="sessions">Got it, download sessions.txt!</a>
+				<a id="export-link" download="sessions" data-action="" data-actionindex="1">Got it, download sessions.txt!</a>
 				<button data-view="main">Back</button>
 			</span>
 		</fieldset>
