Fix that pesky popup auto-focus bug to force focus the name field on open

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
 			
 			<fieldset id="main-save"><legend>Save this window's tabs (<a data-action="savetemp">as temp session</a>)</legend>
 				<div class="box">
-					<input type="text" id="main-save-name" class="flex" placeholder="Session name" data-action="save">
+					<input type="text" id="main-save-name" class="flex" placeholder="Session name" data-action="save" autofocus>
 					<button data-action="save">Save</button>
 				</div>
 			</fieldset>
