Temporarily-ish hack-ish to open the import view in a tab
http://crbug.com/114898

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 				<p>Warning: You are running an old version of Chrome. For security, stability, and compatibility reasons, you should install the latest version from <a href="https://www.google.com/chrome" target="_blank">www.google.com/chrome</a>.</p>
 			</fieldset>
 			
-			<fieldset id="main-saved"><legend>Saved sessions (<a data-view="import">Import</a> - <a data-view="export" data-action="export">Export</a>)</legend>
+			<fieldset id="main-saved"><legend>Saved sessions (<a href="popup.html?import" target="_blank">Import</a> - <a data-view="export" data-action="export">Export</a>)</legend>
 				<div id="main-saved-temp"></div>
 				<div id="main-saved-list"></div>
 			</fieldset>
