--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<title>Session Manager</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/popup.css">
 	</head>
@@ -24,16 +25,14 @@
 			</fieldset>
 			
 			<fieldset id="main-changelog">
-				<p>Session Manager has been updated! Changes include:</p>
+				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>Changed the rename action to be triggered by clicking on a session's name.
-					<li>Changed the remove action to be triggered by clicking on the little "&times;".
-					<li>Added a "tab" action (next to "Add"), which adds the current tab to a session. As a reminder, "Add" adds the current window's tabs to a session.
-					<li>Thanks to Ken McGlothlen for suggesting the "add tab" action and helping me figure out the design changes!
+					<li>Vastly improved the import and export experience: Export now automatically saves to a text file, which can then be imported through Session Manager. Let me know what you think!
+					<li>NOTE: Due to a <a href="http://crbug.com/114898">Chrome bug</a>, I had to make it so the import view opens in a tab. Hopefully this will be fixed soon.
+					<li>Analytics improvements.
+					<li>Lots of minor tweaks.
 				</ul>
-				
-				<p><a href="options.html#changelog" target="_blank">View the full list...</a></p>
 			</fieldset>
 		</div>
 		
