--- a/options.html
+++ b/options.html
@@ -74,6 +74,14 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.4.0 (2012-02-18)</h2>
+			<ul>
+				<li>Vastly improved the import and export experience: Export now automatically saves to a text file, which can then be imported through Session Manager. Let me know what you think!
+				<li>NOTE: Due to a <a href="http://crbug.com/114898">Chrome bug</a>, I had to make it so the import view opens in a tab. Hopefully this will be fixed soon.
+				<li>Analytics improvements.
+				<li>Lots of minor tweaks.
+			</ul>
+			
 			<h2>3.3.3 (2012-01-09)</h2>
 			<ul>
 				<li>Changed the rename action to be triggered by clicking on a session's name.
