Fix reset.css url in options.html

--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Session Manager</title>
-		<link rel="stylesheet" href="css/html5-reset.css">
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/options.css">
 	</head>
 	<body>
