Update to v3.4.1 and tweak some stuff

--- a/popup.html
+++ b/popup.html
@@ -28,10 +28,8 @@
 				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>Vastly improved the import and export experience: Export now automatically saves to a text file, which can then be imported through Session Manager. Let me know what you think!
-					<li>NOTE: Due to a <a href="http://crbug.com/114898">Chrome bug</a>, I had to make it so the import view opens in a tab. Hopefully this will be fixed soon.
-					<li>Analytics improvements.
-					<li>Lots of minor tweaks.
+					<li>Added an open session key+click combo: "&lt;none&gt;", which disables whatever combos are set to it.
+					<li>Fixed some silly analytics bugs.
 				</ul>
 			</fieldset>
 		</div>
