--- a/options.html
+++ b/options.html
@@ -74,6 +74,12 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.4.1 (2012-03-18)</h2>
+			<ul>
+				<li>Added an open session key+click combo: "&lt;none&gt;", which disables whatever combos are set to it.
+				<li>Fixed some silly analytics bugs.
+			</ul>
+			
 			<h2>3.4.0 (2012-02-18)</h2>
 			<ul>
 				<li>Vastly improved the import and export experience: Export now automatically saves to a text file, which can then be imported through Session Manager. Let me know what you think!
