Add errorception support

--- a/options.html
+++ b/options.html
@@ -158,6 +158,7 @@
 			</ul>
 		</section>
 		
+		<script src="js/errors.js"></script>
 		<script src="js/jquery.js"></script>
 		<script src="js/options.js"></script>
 	</body>
