--- a/popup.html
+++ b/popup.html
@@ -69,6 +69,7 @@
 			</span>
 		</fieldset>
 		
+		<script src="js/errors.js"></script>
 		<script src="js/jquery.js"></script>
 		<script src="js/popup.js"></script>
 	</body>
