--- a/background.html
+++ b/background.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
 <script src="https://ssl.google-analytics.com/ga.js" async></script>
+<script src="js/errors.js"></script>
 <script src="js/background.js"></script>
