--- a/options.html
+++ b/options.html
@@ -74,6 +74,12 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.4.2 (2012-04-03)</h2>
+			<ul>
+				<li>Added experimental errorception tracking.
+				<li>Testing out a tiny change in the analytics.
+			</ul>
+			
 			<h2>3.4.1 (2012-03-18)</h2>
 			<ul>
 				<li>Added an open session key+click combo: "&lt;none&gt;", which disables whatever combos are set to it.
