--- a/popup.html
+++ b/popup.html
@@ -24,14 +24,13 @@
 				</div>
 			</fieldset>
 			
-			<fieldset id="main-changelog">
+			<!--<fieldset id="main-changelog">
 				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>Added an open session key+click combo: "&lt;none&gt;", which disables whatever combos are set to it.
-					<li>Fixed some silly analytics bugs.
+					<li>
 				</ul>
-			</fieldset>
+			</fieldset>-->
 		</div>
 		
 		<fieldset id="import"><legend>Import</legend>
