New version, almost

--- a/options.html
+++ b/options.html
@@ -74,9 +74,17 @@
 		<section id="changelog">
 			<h1>Changelog</h1>
 			
+			<h2>3.4.3 (2012-04-19)</h2>
+			<ul>
+				<li>Worked around a critical Chrome 18 bug.
+				<li>Worked around a critical Chrome 11-14 bug.
+				<li>The above errors were identified with Errorception, and this release updates the tracking snippet.
+				<li>Reduced the maxiumum number of sessions displayed without scrollbars to 10 from 12.
+			</ul>
+			
 			<h2>3.4.2 (2012-04-03)</h2>
 			<ul>
-				<li>Added experimental errorception tracking.
+				<li>Added experimental Errorception tracking.
 				<li>Testing out a tiny change in the analytics.
 			</ul>
 			
