--- a/popup.html
+++ b/popup.html
@@ -24,13 +24,14 @@
 				</div>
 			</fieldset>
 			
-			<!--<fieldset id="main-changelog">
+			<fieldset id="main-changelog">
 				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>
+					<li>Worked around a critical Chrome 18 bug.
+					<li>Worked around a critical Chrome 11-14 bug.
 				</ul>
-			</fieldset>-->
+			</fieldset>
 		</div>
 		
 		<fieldset id="import"><legend>Import</legend>
