--- a/options.html
+++ b/options.html
@@ -71,7 +71,7 @@
 			<p>I'm a 15 year old web &amp; game developer who loves making beautiful, useful, and fun things. Like this extension? Check out my <a href="http://tkaz.ec">other stuff</a>!</p>
 		</section>
 		
-		<section id="changelog">
+		<section>
 			<h1>Changelog</h1>
 			
 			<h2>3.4.3 (2012-04-19)</h2>
@@ -79,7 +79,8 @@
 				<li>Worked around a critical Chrome 18 bug.
 				<li>Worked around a critical Chrome 11-14 bug.
 				<li>The above errors were identified with Errorception, and this release updates the tracking snippet.
-				<li>Reduced the maxiumum number of sessions displayed without scrollbars to 10 from 12.
+				<li>Reduced the maxiumum number of sessions displayed without scrollbars from 12 to 10.
+				<li>Update the outdated browser warning for Chrome 18, and reduce the notification interval from every 10 to every 7 days.
 			</ul>
 			
 			<h2>3.4.2 (2012-04-03)</h2>
