Move css/ to styles/ and add Bootstrap

--- a/options.html
+++ b/options.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Session Manager</title>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/options.css">
+		<link rel="stylesheet" href="styles/reset.css">
+		<link rel="stylesheet" href="styles/options.css">
 	</head>
 	<body>
 		<section>
