--- a/popup.html
+++ b/popup.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Session Manager</title>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/popup.css">
+		<link rel="stylesheet" href="styles/reset.css">
+		<link rel="stylesheet" href="styles/popup.css">
 	</head>
 	<body>
 		<div id="main">
