--- a/options.html
+++ b/options.html
@@ -173,8 +173,8 @@
 			</ul>
 		</section>
 		
-		<script src="js/errors.js"></script>
-		<script src="js/jquery.js"></script>
-		<script src="js/options.js"></script>
+		<script src="scripts/errors.js"></script>
+		<script src="scripts/jquery.js"></script>
+		<script src="scripts/options.js"></script>
 	</body>
 </html>
