--- a/popup.html
+++ b/popup.html
@@ -69,8 +69,8 @@
 			</span>
 		</fieldset>
 		
-		<script src="js/errors.js"></script>
-		<script src="js/jquery.js"></script>
-		<script src="js/popup.js"></script>
+		<script src="scripts/errors.js"></script>
+		<script src="scripts/jquery.js"></script>
+		<script src="scripts/popup.js"></script>
 	</body>
 </html>
