--- a/options.html
+++ b/options.html
@@ -74,6 +74,13 @@
 		<section>
 			<h1>Changelog</h1>
 			
+			<h2>3.4.4 (2013-01-27)</h2>
+			<ul>
+				<li>Internal security and compatibility updates.
+				<li>Switched to Ratchet for error logging.
+				<li>Fixed exporting!
+			</ul>
+			
 			<h2>3.4.3 (2012-04-19)</h2>
 			<ul>
 				<li>Worked around a critical Chrome 18 bug.
