--- a/popup.html
+++ b/popup.html
@@ -24,8 +24,7 @@
 				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>Worked around a critical Chrome 18 bug.
-					<li>Worked around a critical Chrome 11-14 bug.
+					<li>Fixed exporting!
 				</ul>
 			</fieldset>
 		</div>
