Update about and changes.

--- a/options.html
+++ b/options.html
@@ -68,115 +68,17 @@
 			<p>If you have a problem and need a reply, feel free to send me an <a href="mailto:me@tkaz.ec">email</a>. Otherwise, leave a comment on Session Manager's <a href="https://chrome.google.com/webstore/detail/mghenlmbmjcpehccoangkdpagbcbkdpc">web store page</a>. If you're a developer and would like to contribute, awesome! Session Manager is open source, and can be found <a href="https://github.com/tkazec/session-manager">on GitHub</a>.</p>
 			
 			<h2>Who?</h2>
-			<p>I'm a 16 year old web &amp; game developer who loves making beautiful, useful, and fun things. Like this extension? Check out my <a href="http://tkaz.ec">other stuff</a>!</p>
+			<p>I'm a 17 year old software engineer, pioneering time-based search at <a href="https://spoton.it">SpotOn</a>. My passion is creating beautiful, useful, and fun things. Like this extension? Check out my <a href="http://tkaz.ec">other stuff</a>!</p>
 		</section>
 		
 		<section>
-			<h1>Changelog</h1>
+			<h1>Changes</h1>
 			
-			<h2>3.4.4 (2013-01-27)</h2>
+			<h2>3.4.6 (2013-10-27)</h2>
 			<ul>
-				<li>Internal security and compatibility updates.
-				<li>Switched to Ratchet for error logging.
-				<li>Fixed exporting!
-			</ul>
-			
-			<h2>3.4.3 (2012-04-19)</h2>
-			<ul>
-				<li>Worked around a critical Chrome 18 bug.
-				<li>Worked around a critical Chrome 11-14 bug.
-				<li>The above errors were identified with Errorception, and this release updates the tracking snippet.
-				<li>Reduced the maxiumum number of sessions displayed without scrollbars from 12 to 10.
-				<li>Update the outdated browser warning for Chrome 18, and reduce the notification interval from every 10 to every 7 days.
-			</ul>
-			
-			<h2>3.4.2 (2012-04-03)</h2>
-			<ul>
-				<li>Added experimental Errorception tracking.
-				<li>Testing out a tiny change in the analytics.
-			</ul>
-			
-			<h2>3.4.1 (2012-03-18)</h2>
-			<ul>
-				<li>Added an open session key+click combo: "&lt;none&gt;", which disables whatever combos are set to it.
-				<li>Fixed some silly analytics bugs.
-			</ul>
-			
-			<h2>3.4.0 (2012-02-18)</h2>
-			<ul>
-				<li>Vastly improved the import and export experience: Export now automatically saves to a text file, which can then be imported through Session Manager. Let me know what you think!
-				<li>NOTE: Due to a <a href="http://crbug.com/114898">Chrome bug</a>, I had to make it so the import view opens in a tab. Hopefully this will be fixed soon.
-				<li>Analytics improvements.
-				<li>Lots of minor tweaks.
-			</ul>
-			
-			<h2>3.3.3 (2012-01-09)</h2>
-			<ul>
-				<li>Changed the rename action to be triggered by clicking on a session's name.
-				<li>Changed the remove action to be triggered by clicking on the little "&times;".
-				<li>Added a "tab" action (next to "Add"), which adds the current tab to a session.
-				<li>The usual healthy dose of internal tweaks...
-				<li>Thanks to Ken McGlothlen for suggesting the "add tab" action and helping me figure out the design changes!
-			</ul>
-			
-			<h2>3.3.2 (2012-01-02)</h2>
-			<ul>
-				<li>Added a list of major changes to the update notification.
-				<li>Added a warning for users running old versions of Chrome.
-				<li>Fixed a bug that reset the setting for saving pinned tabs every time Chrome was launched.
-				<li>Other tiny, mostly internal improvements.
-			</ul>
-			
-			<h2>3.3.1 (2011-12-09)</h2>
-			<ul>
-				<li>Vastly improved the update notification UI.
-				<li>Added a workaround for a critical failure caused by a bug in very old versions of Chrome.
-				<li>Added a little more detail to this page.
-				<li>Internal improvements.
-			</ul>
-			
-			<h2>3.3.0 (2011-11-17)</h2>
-			<ul>
-				<li>Added to and improved pinned tabs options.
-				<li>Always close the popup when opening sessions (workaround for a Chrome bug).
-				<li>Internal changes.
-			</ul>
-			
-			<h2>3.2.0 (2011-06-06)</h2>
-			<ul>
-				<li>Added option to ignore pinned tabs when saving sessions.
-				<li>Minor internal changes.
-			</ul>
-			
-			<h2>3.1.2 (2011-03-12)</h2>
-			<ul>
-				<li>Added a check that prevents failure if there is no omnibox API available. Some users were experiencing this even when running Chrome 9+.
-			</ul>
-			
-			<h2>3.1.1 (2011-02-28)</h2>
-			<ul>
-				<li>Fixed a severe bug where changing the "add to current window" combo to something other than "click" broke opening sessions.
-			</ul>
-			
-			<h2>3.1.0 (2011-02-24)</h2>
-			<ul>
-				<li>Added omnibox functionality.
-				<li>Minor design improvements, including custom scrollbars on the session list that fit the look of Session Manager better.
-				<li>Minor internal improvements.
-				<li>Fixed severe but obscure bug.
-			</ul>
-			
-			<h2>3.0.0 (2011-01-18)</h2>
-			<ul>
-				<li>Switched from modal dialogs to built in non blocking dialogs. Improves design and fixes Session Manager on Mac OS X and Linux (there is a Chrome bug that freezes extensions when they use modal dialogs) and import and export bugs.
-				<li>Improved layout and design.
-				<li>Added incognito support.
-				<li>Added the "Replace" session action.
-				<li>Added "Add" action to the temp session, and gave it a tab count and list.
-				<li>Rewrote the code for the ~5th and ~6th time, it's finally perfect!
-				<li>Added help and changelog to the options page.
-				<li>Added update notification.
-				<li>Probably a few more minor changes I forgot about.
+				<li>Retina support!
+				<li>Omnibox fixes.
+				<li>Misc fixes.
 			</ul>
 		</section>
 		
