Update popup changelog.

--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,9 @@
 				<p>Session Manager has been updated!</p>
 				
 				<ul>
-					<li>Fixed exporting!
+					<li>Retina support!
+					<li>Omnibox fixes.
+					<li>Misc fixes.
 				</ul>
 			</fieldset>
 		</div>
