update description and readme

--- a/options.html
+++ b/options.html
@@ -33,12 +33,12 @@
 		<section>
 			<h1>Help</h1>
 			
-			<p>Session Manager is a simple extension that makes it easy to save, update, restore, and remove sets of tabs.</p>
+			<p>Session Manager is a simple yet powerful extension that makes it quick and easy to save, update, remove, and restore sets of tabs.</p>
 			
 			<ul>
-				<li>Create sessions for daily routines: Pages you open in the morning, noon and evening.
-				<li>Group pages of common interest such as News, Financial and Social Networks.
-				<li>Save the pages found during a research session that you'd like to revisit later.
+				<li>Create sessions for daily routines; pages you open in the morning, noon and evening.
+				<li>Group pages of common interest such as News, Financial and Social.
+				<li>Save pages discovered during a research session that you'd like to revisit later.
 			</ul>
 			
 			<h2>Saving sessions</h2>
